# metisfl

./: .bazelignore  .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build_docker.sh  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml  question.yaml
.github/workflows/: test.yaml
docker/: DockerfileUbuntuPY39  build_image.sh  build_images.sh  run_container.sh
examples/keras_cifar/: template.yaml
examples/keras_fashionmnist/: template.yaml
examples/quickstart-genai/: README.md  config.py  controller.py  data.py  learner.py  model.py  train.py
examples/quickstart-pytorch/: README.md  controller.py  driver.py  learner.py
examples/quickstart-sklearn/: README.md  controller.py  driver.py  learner.py
examples/quickstart-tensorflow/: README.md  controller.py  data.py  driver.py
examples/quickstart-transformers/: README.md  controller.py
metisfl/: __init__.py  config.py
metisfl/common/: __init__.py  client.py  config.py  data_partitioning.py  dtypes.py  formatting.py  logger.py  server.py  types.py  utils.py
metisfl/controller/: __init__.py  __main__.py  controller.py  controller_instance.py  manager.py  model.py  server.py  types.py
metisfl/driver/: clients.py  controller_client.py  driver.py  driver_session.py  learner_client.py  monitor.py  service_initializer.py  service_monitor.py
metisfl/encryption/: BUILD.bazel  __init__.py  ckks_demo.py  encryption_scheme.py  homomorphic.py  masking.py  (+1 more)
test/: federated_average_test.py  hash_map_test.py  message_helper_test.py
(+99 files in other folders)
